RESOLVED FIXED186795
JSImmutableButterfly should assert m_header is adjacent to the data
https://bugs.webkit.org/show_bug.cgi?id=186795
Summary JSImmutableButterfly should assert m_header is adjacent to the data
Keith Miller
Reported 2018-06-18 19:03:48 PDT
JSImmutableButterfly should assert m_header is adjacent to the data
Attachments
Patch (2.08 KB, patch)
2018-06-18 19:07 PDT, Keith Miller
no flags
Keith Miller
Comment 1 2018-06-18 19:07:56 PDT
Saam Barati
Comment 2 2018-06-18 20:54:00 PDT
r=me
WebKit Commit Bot
Comment 3 2018-06-18 23:58:53 PDT
Comment on attachment 343005 [details] Patch Clearing flags on attachment: 343005 Committed r232954: <https://trac.webkit.org/changeset/232954>
WebKit Commit Bot
Comment 4 2018-06-18 23:58:54 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-06-19 09:30:41 PDT
Note You need to log in before you can comment on or make changes to this bug.