JSImmutableButterfly should assert m_header is adjacent to the data https://bugs.webkit.org/show_bug.cgi?id=186795

Reviewed by Saam Barati.

* runtime/JSImmutableButterfly.cpp:
* runtime/JSImmutableButterfly.h:


Canonical link: https://commits.webkit.org/202057@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232954 268f45cc-cd09-0410-ab3c-d52691b4dbfc